--- a/cost-estimator.css
+++ b/cost-estimator.css
@@ -106,6 +106,7 @@ h1 {
   width: 50%;
   margin: 16px 0;
   border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .session-card p {
@@ -247,4 +248,27 @@ h1 {
   width: 100%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+}
+
+@media only screen and (max-width: 900px) {
+  .card {
+    width: 100%;
+  }
+  .card-wrapper {
+    flex-wrap: wrap-reverse;
+  }
+  .session-card {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .container {
+    padding: 0 16px;
+  }
+}
+@media only screen and (max-width: 530px) {
+  .tabs p {
+    padding: 0 4px;
+  }
 }
